Fix, dark mode on Windows

--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -17,20 +17,14 @@
 }
 
 /* Dark */
-@media (prefers-color-scheme: dark) {
-    :root.dark {
-        --table-color-rgb: 18, 18, 18;
-        --table-color: rgb(var(--table-color-rgb));
+:root.dark {
+    --table-color-rgb: 18, 18, 18;
+    --table-color: rgb(var(--table-color-rgb));
 
-        --text-color-rgb: 255, 255, 255;
-        --text-color: rgb(var(--text-color-rgb));
+    --text-color-rgb: 255, 255, 255;
+    --text-color: rgb(var(--text-color-rgb));
 
-        --primary-color: #014b9b;
-        --background-color: #1e2023;
-        --shadow: 0px 10px 15px -3px rgba(0, 73, 163, 0.2);
-    }
-    
-    body {
-        color-scheme: dark;
-    }
+    --primary-color: #014b9b;
+    --background-color: #1e2023;
+    --shadow: 0px 10px 15px -3px rgba(0, 73, 163, 0.2);
 }
